# mongozen

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.rst  pytest.ini  setup.cfg  setup.py
ci/: mongozen_cfg.yml.enc  mongozen_credentials.yml.enc
mongozen/: __init__.py  _version.py  collection_cfg.py  core.py  mongozen_objs.py  param_inference.py  param_inference_maps.py  shared.py  util_constants.py
mongozen/matchop/: __init__.py  _matchop.py
mongozen/queries/: __init__.py
mongozen/queries/common/: __init__.py  common.py
mongozen/queries/time/: __init__.py  time.py
mongozen/scripts/: dimongo_cli.py  mongozen_cli.py  queries_cli.py  shared_options.py  util_cli.py
mongozen/scripts/queries_clis/: __init__.py  timeline_cli.py
mongozen/util/: __init__.py  _util.py
tests/: mongozen_cfg.yml  mongozen_credentials.yml  test_cmds.py  test_core.py  test_matchop.py
